// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar #render component with or without an image (1) 1`] = `
<gux-avatar-beta>
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr>
            NaN
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with or without an image (2) 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with or without an image (3) 1`] = `
<gux-avatar-beta>
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr>
            NaN
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
  <img slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with or without an image (4) 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
  <img slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "large" 1`] = `
<gux-avatar-beta size="large">
  <mock:shadow-root>
    <div class="gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr>
            NaN
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium" 1`] = `
<gux-avatar-beta size="medium">
  <mock:shadow-root>
    <div class="gux-avatar gux-medium">
      <div class="gux-content">
        <slot name="image">
          <abbr>
            NaN
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "small" 1`] = `
<gux-avatar-beta size="small">
  <mock:shadow-root>
    <div class="gux-avatar gux-small">
      <div class="gux-content">
        <slot name="image">
          <abbr>
            NaN
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "xsmall" 1`] = `
<gux-avatar-beta size="xsmall">
  <mock:shadow-root>
    <div class="gux-avatar gux-xsmall">
      <div class="gux-content">
        <slot name="image">
          <abbr>
            NaN
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;
